# zephyr_test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  prj.conf  prj_native_posix_64.conf
src/: ConsoleThread.hpp  MyClass.hpp  SerialThread.hpp  TF_Config.h  main.cpp
